--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=1024" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <title>Vorstellung FSR ET 2015</title>
+  <title>Vorstellung FSR ET 2016</title>
 
   <meta name="description" content="Vorstellung des Fachschaftsrates Elektrotechnik 2015" />
   <meta name="author" content="Tino Steinmetz" />
@@ -101,7 +101,7 @@
       <q>
         <ul>
           <li>Vertretung der Fachschaft</li>
-          <li>Besteht aus Studenten der Fachschaft</li>
+          <li>Besteht aus Studierenden der Fachschaft</li>
           <li>Wahl im Wintersemester</li>
           <li>Unabhängig von AStA und Fakultät</li>
           <li><b>DER</b> Ansprechpartner aller Art</li>
@@ -148,7 +148,7 @@
         <ul>
           <li>Das Unigeschehen aktiv mitgestalten</li>
           <li>Fester Kontakt zu höheren Semestern</li>
-          <li>Positives Image bei den Dozenten</li>
+          <li>Positives Image bei den Lehrenden</li>
           <li>Freibier auf jeder Sitzung</li>
         </ul>
       </q>
@@ -163,7 +163,7 @@
       <q>
         <ul>
           <li>Unterstützung bei: Studienorganisation, Einleben am Studienstandort, Hilfe bei Fragen und Problemen im Bezug auf das Studium</li>
-          <li>Mentoren sind Studenten aus den höheren Semestern</li>
+          <li>Mentor*innen sind Studierende aus den höheren Semestern</li>
           <li>Teilnahme ist freiwillig</li>
         </ul>
       </q>
@@ -174,8 +174,8 @@
       <q>
         <ul>
           <li>Erleichterung des Übergangs von der Schule oder Arbeit ins Studium</li>
-          <li>Kontakte zu Studenten höherer Semester knüpfen</li>
-          <li>akute Probleme können über die Mentoren an die Lehrkräfte weitergeleitet werden</li>
+          <li>Kontakte zu Studierenden höherer Semester knüpfen</li>
+          <li>Probleme können über die Mentor*innen an die Lehrkräfte weitergeleitet werden</li>
         </ul>
       </q>
     </div>
@@ -205,10 +205,9 @@
       <h2>Organisation des Mentoring</h2>
       <q>
         <ul>
-          <li>5 Gruppen mit je 2 Mentoren</li>
+          <li>Einteilung in Gruppen beim ersten Treffen am Donnerstag</li>
           <li>Häufigkeit der Treffen und Termine werden in den Gruppen bestimmt</li>
-          <li>Kennenlernen der Mentoren nachher beim Grillen</li>
-          <li>Eintragung in die Gruppen beim ersten Treffen am Donnerstag</li>
+          <li>Kennenlernen der Mentor*innen nachher beim Grillen</li>
         </ul>
       </q>
     </div>
@@ -242,15 +241,7 @@
       <h2>Dienstag, 04.10.2015</h2>
       <q>
         <h2 align="center">Campustag</h2><br>
-        <h3 align="center">Wir hoffen ihr wart alle da ;D</h3><br>
-      </q>
-    </div>
-    <div id="ablaufplan-dienstag-3" class="step slide multi" data-x="9000" data-y="1500">
-      <h2>Dienstag, 04.10.2015</h2>
-      <q>
-        <h2 align="center">Campustag</h2><br>
-        <h3 align="center">Wir hoffen ihr wart alle da ;D</h3><br>
-        <h4 align="center">(Denn mehr bekommt ihr von eurem Semesterbeitrag vermutlich nicht mehr zu sehen)</h4>
+        <h3 align="center">Wir hoffen ihr wart alle da und hattet Spaß ;D</h3><br>
       </q>
     </div>
 
@@ -332,7 +323,7 @@
       <q>
         <ul>
           <li>In den Einwohnermeldeämtern in Rostock</li>
-          <li>Auf dem morgigen Campustag</li>
+          <li>Studierendenausweis nicht vergessen!</li>
         </ul>
       </q>
     </div>
