Code aufgeräumt und Veranstaltungen hinzugefügt.

--- a/index.html
+++ b/index.html
@@ -120,7 +120,17 @@
       </q>
     </div>
 
-    <div id="fachschaftsrat-kontakt" class="step slide" data-x="1000" data-y="1500">
+    <div id="Sitzungen" class="step img-slide" data-x="1000" data-y="1500" data-scale=1>
+      <img src="img/fsr_sitzung.jpg" alt="Sitzungen" width="900" />
+    </div>
+    <div id="Hoersaalkino" class="step img-slide" data-x="1000" data-y="2300" data-scale=1>
+      <img src="img/hoersaalkino.jpg" alt="Hoersaalkino" height="700" />
+    </div>
+    <div id="Sommerfest" class="step img-slide" data-x="0" data-y="2300" data-scale=1>
+      <img src="img/iefsf16_poster.png" alt="Sommerfest" height="700" />
+    </div>
+
+    <div id="fachschaftsrat-kontakt" class="step slide" data-x="-1000" data-y="2300">
       <h2>Kontakt zum Fachschaftsrat</h2>
       <q>
         <ul>
@@ -134,15 +144,11 @@
       </q>
     </div>
 
-    <div id="fsr-foto" class="step img-slide" data-x="1000" data-y="2300" data-scale=1>
-      <img src="img/Gruppenfoto_FSR_ET.jpg" alt="FSR bei Raumfeld" width="900" />
-    </div>
-
     <div id="fsr-mitmachen" class="step title" data-x="0" data-y="1100" data-z="6000" data-rotate="33" data-scale=3>
       <h1>SEID DABEI!!!</h1>
     </div>
 
-    <div id="fsr-vorteile" class="step slide" data-x="-1000" data-y="2300" data-scale=1>
+    <div id="fsr-vorteile" class="step slide" data-x="-1000" data-y="3100" data-scale=1>
       <h2>Was habt ihr davon?</h2>
       <q>
         <ul>
@@ -180,10 +186,6 @@
       </q>
     </div>
 
-    <div id="noob" class="step img-slide" data-x="0" data-y="7300" data-scale=1>
-      <img src="img/military-humor-soldier-russia-listen-here-noob-meme.jpg" alt="NOOB" width="900" />
-    </div>
-
     <div id="mentoring-inhalte" class="step slide" data-x="-1000" data-y="8100">
       <h2>Inhalte des Mentoring</h2>
       <q>
@@ -197,11 +199,11 @@
       </q>
     </div>
 
-    <div id="mentoring-aber" class="step title" data-x="2000" data-y="7300" data-scale=3 data-rotate="-90">
+    <div id="mentoring-aber" class="step title" data-x="1500" data-y="7300" data-scale=3 data-rotate="-90">
       <h1>Die genauen Inhalte bestimmt ihr!!!</h1>
     </div>
 
-    <div id="mentoring-organisation" class="step slide" data-x="4000" data-y="7300" data-rotate="-90">
+    <div id="mentoring-organisation" class="step slide" data-x="3500" data-y="7300" data-rotate="-90">
       <h2>Organisation des Mentoring</h2>
       <q>
         <ul>
@@ -217,22 +219,8 @@
       <h1>Ablauf der Erstie-Woche</h1>
     </div>
 
-    <!-- <div id="ablaufplan-montag" class="step slide" data-x="8000" data-y="1500">
-      <h2>Montag, 05.10.2015</h2>
-      <q>
-        <b>11:00 - 12:00 Uhr:</b> Begrüßung durch den Fachschaftsrat und Vorstellung des Mentoring
-        <br/>
-        <b>Danach:</b> gemeinsames Grillen mit dem Fachschaftsrat <b>(Freibier!!!)</b>
-      </q>
-    </div> -->
-
     <div id="ablaufplan-dienstag-1" class="step slide multi" data-x="9000" data-y="1500">
       <h2>Dienstag, 04.10.2015</h2>
-      <!--<q>
-        <b>Ab 9:30 Uhr:</b> zentraler Campustag auf dem Ulmencampus, Beratung durch den FSR <b>(Haus 1 Raum 024)</b>
-        <br/>
-        <b>Ab 13 Uhr:</b> Livemusik auf dem Ulmencampus
-      </q>-->
       <q>
         <h2 align="center">Campustag</h2><br>
       </q>
@@ -247,16 +235,6 @@
 
     <div id="ablaufplan-mittwoch" class="step slide" data-x="10000" data-y="1500">
       <h2>Mittwoch, 05.10.2015</h2>
-      <!--<q>
-        <b>Erstie-Rallye</b>
-        <br/>
-        <ul>
-          <li>Start: 14:00 Uhr</li>
-          <li>Treffpunkt: Albert-Einstein-Str. 2</li>
-          <li>Kennenlernen der Räume und Standorte</li>
-          <li>Wir erwarten euch dann am Ziel ;)</li>
-        </ul>
-      </q> -->
       <q>
         <b>11:00 - 12:00 Uhr:</b> Begrüßung durch den Fachschaftsrat und Vorstellung des Mentoring
         <br/>
@@ -308,13 +286,12 @@
     </div>
 
     <div id="wohnsitzpraemie-punkte" class="step slide" data-x="9000" data-y="6500" data-scale=1>
-      <h2>Vorteile</h2>
+      <h2>Was ist das?</h2>
       <q>
-        <ol>
+        <ul>
           <li>Bei Ummeldung nach Rostock erhält jeder Studierende 150€ in Bar</li>
-          <li>50€ extra bei genügend Ummeldungen</li>
-          <li>Die Uni erhält dann ebenfalls zusätzliche Mittel</li>
-        </ol>
+          <li>Die Uni erhält ebenfalls zusätzliche Mittel</li>
+        </ul>
       </q>
     </div>
 
@@ -323,7 +300,7 @@
       <q>
         <ul>
           <li>In den Einwohnermeldeämtern in Rostock</li>
-          <li>Studierendenausweis nicht vergessen!</li>
+          <li>Mietbescheinigung, Perso und Studienbescheinigung nicht vergessen!</li>
         </ul>
       </q>
     </div>
