Student Project Room hinzugefügt

--- a/index.html
+++ b/index.html
@@ -121,13 +121,30 @@
     </div>
 
     <div id="Sitzungen" class="step img-slide" data-x="1000" data-y="1500" data-scale=1>
-      <img src="img/fsr_sitzung.jpg" alt="Sitzungen" width="900" />
+      <img src="img/fsr_sitzung.jpg" alt="Sitzungen" width="850" />
     </div>
-    <div id="Hoersaalkino" class="step img-slide" data-x="1000" data-y="2300" data-scale=1>
-      <img src="img/hoersaalkino.jpg" alt="Hoersaalkino" height="700" />
+    <div id="Unternehmensabend" class="step img-slide" data-x="1000" data-y="2300" data-scale=1>
+      <img src="img/unternehmensabend.png" alt="Unternehmensabend" width="850" />
     </div>
-    <div id="Sommerfest" class="step img-slide" data-x="0" data-y="2300" data-scale=1>
-      <img src="img/iefsf16_poster.png" alt="Sommerfest" height="700" />
+    <div id="Hörsaalkino" class="step img-slide" data-x="1000" data-y="3100" data-scale=1>
+      <img src="img/hoersaalkino.jpg" alt="Hoersaalkino" height="650" />
+    </div>
+    <div id="Sommerfest" class="step img-slide" data-x="1000" data-y="3900" data-scale=1>
+      <img src="img/iefsf16_poster.png" alt="Sommerfest" height="650" />
+    </div>
+
+    <div id="SPR" class="step slide" data-x="0" data-y="3100">
+      <h2>Student Project Room</h2>
+      <q>
+        <ul>
+          <li>Raum und Möglichkeit zur Entwicklung und Verwirklichung von eigenen Ideen</li>
+          <li>Umsetzung von gemeinsamen Projekten im Team</li>
+        </ul>
+      </q>
+    </div>
+
+    <div id="SPRbild" class="step img-slide" data-x="0" data-y="2300" data-scale=1>
+      <img src="img/DSC_0059.JPG" alt="Student Project Room" width="850" />
     </div>
 
     <div id="fachschaftsrat-kontakt" class="step slide" data-x="-1000" data-y="2300">
