Kleine Fehler behoben

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <ul>
           <li>Elektrotechnik</li>
           <li>Informationstechnik/ Technische Informatik</li>
-          <li>Computational Science an Engineering</li>
+          <li>Computational Science and Engineering</li>
           <li>Electrical Engineering</li>
         </ul>
       </q>
@@ -97,7 +97,7 @@
     </div>
 
     <div id="fachschaftsrat-erklaerung" class="step slide" data-x="-1000" data-y="1500">
-      <h2>Was ist der Fachschaftsrat</h2>
+      <h2>Was ist der Fachschaftsrat?</h2>
       <q>
         <ul>
           <li>Vertretung der Fachschaft</li>
